[gd_scene load_steps=11 format=3 uid="uid://n3qds18fabsn"]

[ext_resource type="Script" uid="uid://ccs4n8wx8a2fg" path="res://scenes/main_menu/main_menu_ui.gd" id="1_c7op6"]
[ext_resource type="PackedScene" uid="uid://cxccrwe47j83a" path="res://scenes/main_menu/main_menu_background.tscn" id="2_lhs03"]
[ext_resource type="Texture2D" uid="uid://c2rulvjndiu8m" path="res://gui_assets/wokeraccoon-logo.png" id="4_lhs03"]
[ext_resource type="StyleBox" uid="uid://cicxvr8nl2f60" path="res://gui_assets/panel/panel_alt.tres" id="4_rfupy"]

[sub_resource type="Animation" id="Animation_ob46e"]
resource_name = "INTRO"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_uqeha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uqeha"]
_data = {
&"INTRO": SubResource("Animation_ob46e"),
&"RESET": SubResource("Animation_uqeha")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ob46e"]
animation = &"INTRO"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uqeha"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wem23"]
states/INTRO/node = SubResource("AnimationNodeAnimation_ob46e")
states/INTRO/position = Vector2(346.667, 94.6667)
transitions = ["Start", "INTRO", SubResource("AnimationNodeStateMachineTransition_uqeha")]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7op6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.133333, 0.184314, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(640, 480)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
stretch = true
stretch_shrink = 4
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="MainMenuBackground" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_lhs03")]

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -253.0
offset_right = 272.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.426136
anchor_top = -0.0877219
anchor_right = 0.548696
anchor_bottom = -0.0877219
offset_top = 148.177
offset_right = 13.2887
offset_bottom = 238.177
grow_horizontal = 2
grow_vertical = 2
rotation = -0.449135
bbcode_enabled = true
text = "[wave][shake][color=#f9c22b][font_size=64]Super WIP demo![/font_size]
[font_size=32]Warning: May contain bugs!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[wave amp=100 freq=2][font_size=128]Gambler's Prayer[/font_size]"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="MarginContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = " v0.1"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="MarginContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 96)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_rfupy")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_lhs03")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "A game by wokeraccoon"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uqeha")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wem23")
anim_player = NodePath("../AnimationPlayer")

[connection signal="pressed" from="MarginContainer/MarginContainer2/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
